--- a/app/assets/stylesheets/experiments.css.scss
+++ b/app/assets/stylesheets/experiments.css.scss
@@ -53,33 +53,11 @@ div.brewimage {
   }
 }
 
-ol.instructions {
-  text-align: justify;
-  line-height: 20pt;
-  font-family: "Apple Symbols";
-  font-size: 18px;
-  letter-spacing: 1px;
-  margin-left: 60px;
-  margin-right: 40px;
-  margin-top: 30px;
-  li {
-    list-style: decimal;
-  }
-}
-
-
-
 div.grid {
   background-image: image-url("background-variables-coffee-experiments.png");
   width: 800px;
   height: 794px;
   position: relative;
-}
-
-div.brewtable {
-  background-image: image-url("coffee-experiments-chart-paper.png");
-  position: relative;
-  height: 413px;
 }
 
 div.ideas {
@@ -109,54 +87,6 @@ div.letters p:first-letter {
   line-height: 16pt;
   font-family: "Apple Symbols";
   margin-right: 0px;
-}
-
-
-
-div table {
-  font-family: "Apple Symbols";
-  font-size: 16px;
-  font-weight: 400;
-  text-align: left;
-  border-spacing: 0;
-  border-collapse: collapse;
-  width: 90%;
-  margin: auto;
-  margin-top: 33px;
-
-}
-
-div table td {
-  width: 80px;
-  height: 45px;
-  border-left:1px solid black;
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 12px;
-  vertical-align: top;
-}
-
-div table td:last-child {
-  width: auto;
-}
-
-div table td:first-child, div table th:first-child {
-  border-left: none;
-}
-
-div table th {
-  border-bottom: 1px solid black;
-  padding-bottom: 12px;
-  padding-top: 6px;
-  font-family: "American Typewriter";
-  font-size: 14px;
-  border-left:1px solid black;
-  text-align: center;
-}
-
-div table th:last-child {
-  text-align: left;
-  padding-left: 32px;
 }
 
 footer {
@@ -241,24 +171,6 @@ h6 {
 
 }
 
-li:hover ul {
-  display: block;
-  position: absolute;
-}
-
-li:hover li {
-  float: none;
-  font-size: 11px;
-}
-
-li:hover li a:hover {
-  background: #867d74;
-}
-
-li ul {
-  display: none;
-}
-
 nav {
 	position: absolute;
 	width: inherit;
@@ -268,6 +180,21 @@ nav {
   height: 85px;
   background-image: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0.8));
 }
+
+ol.instructions {
+  text-align: justify;
+  line-height: 20pt;
+  font-family: "Apple Symbols";
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-left: 60px;
+  margin-right: 40px;
+  margin-top: 30px;
+  li {
+    list-style: decimal;
+  }
+}
+
 
 p {
   margin: 6px;
@@ -307,55 +234,325 @@ p.instructionsleft {
   margin-left: 170px;
 }
 
+
+//brewtable
+
+div.brewtable {
+  background-image: image-url("coffee-experiments-chart-paper-tapes.png");
+  position: relative;
+  height: 395px;
+  padding-top: 20px;
+}
+
+table.brewtable {
+
+    font-family: "Apple Symbols";
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    border-spacing: 0;
+    border-collapse: collapse;
+    width: 90%;
+    margin: auto;
+    margin-top: 33px;
+
+   td {
+    width: 80px;
+    height: 45px;
+    border-left:1px solid black;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 12px;
+    vertical-align: top;
+  }
+
+  td:last-child {
+    width: auto;
+  }
+
+  td:first-child, th:first-child {
+    border-left: none;
+  }
+
+  th {
+    border-bottom: 1px solid black;
+    padding-bottom: 12px;
+    padding-top: 6px;
+    font-family: "American Typewriter";
+    font-size: 14px;
+    border-left:1px solid black;
+    text-align: center;
+  }
+
+  th:last-child {
+    text-align: left;
+    padding-left: 32px;
+  }
+
+}
+
+
+//Naviation 'table'
+
+
+
 table.nav {
 	width: 90%;
 	margin: auto;
 	height: 55px;
-}
 
-table.nav td.current {
-    background-image: image-url("coffee-experiments-glasses.png");
-    background-size: 40%;
-    background-repeat: no-repeat;
-    background-position-x: 60%;
-    opacity: 1
+  li:hover ul {
+    display: block;
+    position: absolute;
+  }
 
-}
+  li:hover li {
+    float: none;
+    font-size: 11px;
+  }
 
-table.nav td.current > a {
-	font-weight: normal; 
+  li:hover li a:hover {
+    background: #867d74;
+  }
 
-}
+  li ul {
+    display: none;
+  }
 
-table.nav td:hover {
-  opacity: 1;
-}
+  td.current {
+      background-image: image-url("coffee-experiments-glasses.png");
+      background-size: 40%;
+      background-repeat: no-repeat;
+      background-position-x: 60%;
+      opacity: 1
 
-table.nav td {
-	width:25%;
-	vertical-align: bottom;
-	opacity: 0.8;
-}
+  }
 
-ul li {
-  display: block;
-  float: left;
-}
+  td.current > a {
+  	font-weight: normal; 
 
-ul li a {
-  display: block;
-  text-decoration: none;
-  color: #ffffff;
-  border-top: 1px solid #ffffff;
-  padding: 5px 10px 5px 10px;
-  background: #4b4642;
-  white-space: nowrap;
-  margin-left: 10px;
+  }
+
+  td:hover {
+    opacity: 1;
+  }
+
+  td {
+  	width:25%;
+  	vertical-align: bottom;
+  	opacity: 0.8;
+  }
+
+  ul li a {
+    display: block;
+    text-decoration: none;
+    color: #ffffff;
+    border-top: 1px solid #ffffff;
+    padding: 5px 10px 5px 10px;
+    background: #4b4642;
+    white-space: nowrap;
+    margin-left: 10px;
+  }
+
+  ul li p:hover {
+    color: white;
+    background:#4b4642;
+  }
 }
 
 ul li a:hover {
-  color: white;
-  background:#4b4642;
+    color: white;
+    background:#4b4642;
+}
+
+
+
+
+//calculator table:
+
+div.calctable {
+  background-image: image-url("coffee-experiments-calculator-press-background.png");
+  position: relative;
+  height: 140px;
+
+
+  div.calc {
+      padding-top: 102px;
+      padding-left: 63px;
+  }
+
+  .calcbeanimage > div {
+      width:100px;
+      height:100px;
+      display:none;
+  }
+
+  .presscalcimages {
+    margin-left: 360px;
+  }
+
+  .calcbeanimage {
+      float: left;
+  }
+
+//beans
+
+  .smallbeans { 
+    background-image: image-url("coffee-experiments-calculator-1beans.png");
+    background-size: 100%;
+  }
+  .medbeans { 
+    background-image: image-url("coffee-experiments-calculator-2beans.png"); 
+    background-size: 100%;
+  }
+  .largebeans  { 
+    background-image: image-url("coffee-experiments-calculator-3beans.png"); 
+    background-size: 100%;
+  }
+  .extrabeans {
+    background-image: image-url("coffee-experiments-calculator-4beans.png");
+    background-size: 100%;
+  }
+
+  
+  //water
+  .calcwaterimage > div {
+    width:100px;
+    height:100px;
+    display:none;
+  }
+
+
+  .calcwaterimage {
+    float: left;
+    margin-left: 130px;
+  }
+
+  .onewater { 
+    background-image: image-url("coffee-experiments-calculator-1water.png");
+    background-size: 100%;
+  }
+  .twowaters { 
+    background-image: image-url("coffee-experiments-calculator-2waters.png"); 
+    background-size: 100%;
+  }
+  .threewaters  { 
+    background-image: image-url("coffee-experiments-calculator-3waters.png"); 
+    background-size: 100%;
+  }
+  .fourwaters  { 
+    background-image: image-url("coffee-experiments-calculator-4waters.png"); 
+    background-size: 100%;
+  }
+  
+
+  //#Servings
+
+  .calcmugimage > div {
+    width:100px;
+    height:100px;
+    display:none;
+  }
+
+
+  .calcmugimage {
+    float: left;
+    margin-left: 265px;
+  }
+
+  .onemug { 
+    background-image: image-url("coffee-experiments-calculator-1mug.png");
+    background-size: 100%;
+  }
+  .twomugs { 
+    background-image: image-url("coffee-experiments-calculator-2mugs.png"); 
+    background-size: 100%;
+  }
+  .twobigmugs  { 
+    background-image: image-url("coffee-experiments-calculator-2bigmugs.png"); 
+    background-size: 100%;
+  }
+  .fourmugs {
+    background-image: image-url("coffee-experiments-calculator-4mugs.png");
+    background-size: 100%;
+  }
+
+}
+
+  div.arrowsimage {
+    background-image: image-url("coffee-experiments-calculator-press-arrows.png");
+    height: 30px;
+    width: 15px;
+    background-repeat: no-repeat;
+    float:right;
+    margin-right: 5px;
+    margin-top: 3px;
+  }
+
+table.calc {
+
+  text-align: center;
+  border-spacing: 0;
+  border-collapse: collapse;
+  font-family: "American Typewriter";
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 14px;
+  width: auto;
+  
+
+
+  li:hover ul {
+    display: block;
+    position: absolute;
+  }
+
+
+  li ul {
+    display: none;
+  }
+
+  ul li {
+    border-top: 1px solid #ffffff;
+  }
+
+  td li:hover {
+    color: white;
+    background: #867d74;
+
+   
+  }
+
+  td li {
+    color: white;
+    background:#4b4642;
+    width: 134px;
+    height: 31px;
+    padding-top: 5px;
+    
+    
+  }
+
+  td:last-child {
+    border-right: 1px solid #4b4642;
+  }
+
+
+  div.dimensions {
+    font-size: 10px;
+  }
+
+  td {
+    width: 130px;
+    height: 30px;
+    border-left:1px;
+    border-right: 2px solid #ffffff;
+    padding-top: 1px;
+    vertical-align: text-top;
+    text-align: center;
+    color: white;
+
+  }
 }
 
 
