--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -12,28 +12,33 @@
 
 
 
-<h3>Brew Calculator</h3>
+<h3>Press Brew Calculator</h3>
 
   <div class=calctable>
-
     <div class="presscalcimages">
-      <div class="calcbeanimage">
-        <div class="smallbeans"></div>
-        <div class="medbeans"></div>
-        <div class="largebeans"></div>
-        <div class="extrabeans"></div>
+      <div class="calcapparatusimage calcimage">
+        <div class="pressone" style="display:block"></div>        
       </div>
-      <div class="calcwaterimage">
-        <div class="onewater"></div>
-        <div class="twowaters"></div>
-        <div class="threewaters"></div>  
-        <div class="fourwaters"></div>     
+      <div class="calcratioimage calcimage">
+        <div class="calcratio" style="display:block"></div>        
       </div>
-      <div class="calcmugimage">
-        <div class="onemug"></div>
-        <div class="twomugs"></div>
-        <div class="twobigmugs"></div>
-        <div class="fourmugs"></div>
+      <div class="calcbeanimage calcimage">
+        <div data-r="16" class="smallbeans"></div>
+        <div data-r="14" class="medbeans" style="display:block"></div>
+        <div data-r="11" class="largebeans"></div>
+        <div data-r="10" class="extrabeans"></div>
+      </div>
+      <div class="calcwaterimage calcimage">
+        <div data-g="350" class="onewater"></div>
+        <div data-g="600" class="twowaters"></div>
+        <div data-g="1000" class="threewaters" style="display:block"></div>  
+        <div data-g="1500" class="fourwaters"></div>     
+      </div>
+      <div class="calcmugimage calcimage">
+        <div data-g="350" class="onemug"></div>
+        <div data-g="600" class="twomugs" style="display:block"></div>
+        <div data-g="1000" class="twobigmugs"></div>
+        <div data-g="1500" class="fourmugs"></div>
       </div>
     </div>
 
@@ -46,16 +51,16 @@
               <div id="press-size" style="margin-left: 15px; margin-bottom:3px">8c Press
                 <div class="dimensions">34oz - 1000ml</div></div>
               <ul class="calc" id="press-size-dropdown">
-                <li data-value="onewater" data-g="350">3c Press 
+                <li data-g="350">3c Press 
                   <div class="dimensions">12oz - 350ml</div>
                 </li>
-                <li data-value="twowaters" data-g="600">4c Press 
+                <li data-g="600">4c Press 
                   <div class="dimensions">17-21oz - 600ml</div>
                 </li>
-                <li data-value="threewaters" data-g="1000">8c Press
+                <li data-g="1000">8c Press
                   <div class="dimensions">34oz - 1000ml</div>
                 </li>
-                <li data-value="fourwaters" data-g="1500">12c Press
+                <li data-g="1500">12c Press
                   <div class="dimensions">51oz - 1500ml</div>
                 </li>
               </ul>
@@ -65,10 +70,10 @@
           <td><div class="arrowsimage"></div>
             <li><div id="press-ratio" style="margin-left: 15px; margin-bottom:14px">1:14</div>
               <ul class="calc" id="press-ratio-dropdown">
-                  <li data-value="extrabeans" data-r="10">1:10</li>
-                  <li data-value="largebeans" data-r="11">1:11</li>
-                  <li data-value="medbeans" data-r="14">1:14</li>
-                  <li data-value="smallbeans" data-r="16">1:16</li>
+                  <li data-r="10">1:10</li>
+                  <li data-r="11">1:11</li>
+                  <li data-r="14">1:14</li>
+                  <li data-r="16">1:16</li>
               </ul>
             </li>
           </td>
@@ -86,10 +91,10 @@
           <td><div class="arrowsimage"></div>
             <li><div id="press-servings" style="margin-left: 15px; margin-bottom:14px">2 big mugs</div>
               <ul class="calc" id="press-servings-dropdown">
-                  <li data-value="onemug" data-g="350">1+ mug</li>
-                  <li data-value="twomugs" data-g="600">2 mugs</li>
-                  <li data-value="twobigmugs" data-g="1000">2 big mugs</li>
-                  <li data-value="fourmugs" data-g="1500">4 mugs</li>
+                  <li data-cell="calcmugimage" data-value="onemug" data-g="350">1+ mug</li>
+                  <li data-cell="calcmugimage" data-value="twomugs" data-g="600">2 mugs</li>
+                  <li data-cell="calcmugimage" data-value="twobigmugs" data-g="1000">2 big mugs</li>
+                  <li data-cell="calcmugimage" data-value="fourmugs" data-g="1500">4 mugs</li>
               </ul>
             </li>
           </td>
