--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -4,68 +4,211 @@
         <%= image_tag "coffee-experiments-pourover-V60.png" %>
     </div>
   <p>
-  	If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness. 
+    The classic pour over is a filtered, non-immersion style brew method. Also known as the V-60, bee house and melitta drip, the key identifiers are a clean, refined flavor and smooth finish due to the filtered out oils and particulates.  
   </p>
 </div>
 
-<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
-	<div>
-      <table>
-        <tr> 
-	      <th>Source</th>
-	      <th>Bean:H2O</th>
-	      <th>Time</th>
-	      <th>Grind</th>
-	      <th>Temp</th>
-	      <th>Bean</th>
-        </tr>
 
-        <tr> 
-          <td>Blue Bottle</td>
-          <td>1:10</td>
-      	  <td>30s Bloom, 4min</td>
-      	  <td>Coarse</td>
-      	  <td>Boil</td>
-      	  <td>fruity, heavy, creamy</td>
-        </tr>
 
-        <tr> 
-          <td>Stumptown</td>
-          <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Coarse</td>
-      	  <td>Just to a boil</td>
-      	  <td>n/a</td>
-        </tr>
 
-        <tr> 
-          <td>Ritual Coffee</td>
-          <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Medium</td>
-      	  <td>96°C</td>
-      	  <td>TBD</td>
-        </tr>
 
-        <tr> 
-          <td>Sight Glass</td>
-          <td>1:14</td>
-      	  <td>30sec, Stir, 3:30min</td>
-      	  <td>Coarser</td>
-      	  <td>Boil, let cool a few min</td>
-      	  <td>TBD</td>
-        </tr>
+<h3>Press Brew Calculator</h3>
 
-        <tr> 
-          <td>Verve</td>
-          <td>1:11</td>
-      	  <td>30sec, Stir, 3min</td>
-      	  <td>Coarse</td>
-      	  <td>90°-96°C</td>
-      	  <td>TBD</td>
-        </tr>
+  <div class=calctable>
+    <div class="presscalcimages">
+      <div class="calcapparatusimage calcimage">
+        <div data-g="300" class="pouroverone"></div> 
+        <div data-g="400" class="pourovertwo" style="display:block"></div>        
+      </div>
+      <div class="calcratioimage calcimage">
+        <div class="calcratio" style="display:block"></div>        
+      </div>
+      <div class="calcbeanimage calcimage">
+        <div data-r="15" class="smallbeans"></div>
+        <div data-r="14" class="medbeans" style="display:block"></div>
+        <div data-r="12" class="largebeans"></div>
+        <div data-r="11" class="extrabeans"></div>
+      </div>
+      <div class="calcwaterimage calcimage">
+        <div data-g="300" class="twowaters"></div> 
+        <div data-g="400" class="fourwaters" style="display:block"></div>     
+      </div>
+      <div class="calcmugimage calcimage">
+        <div data-g="300" class="smallmug"></div>
+        <div data-g="400" class="onemug" style="display:block"></div>
+      </div>
+    </div>
 
+    <div class=calc>
+      <table class=calc>
+        <tr>
+
+          <td><div class="arrowsimage"></div>
+            <li>
+              <div id="press-size" style="margin-left: 15px; margin-bottom:3px">Regular
+                <div class="dimensions">V2 - #4 - 400ml</div></div>
+              <ul class="calc" id="press-size-dropdown">
+                <li data-g="300">Small Cone
+                  <div class="dimensions">V1 - #2 - 300ml</div>
+                </li>
+                <li data-g="400">Regular 
+                  <div class="dimensions">V2 - #4 - 400ml</div>
+              </ul>
+            </li>
+          </td>
+
+          <td><div class="arrowsimage"></div>
+            <li><div id="press-ratio" style="margin-left: 15px; margin-bottom:14px">1:14</div>
+              <ul class="calc" id="press-ratio-dropdown">
+                  <li data-r="11">1:11</li>
+                  <li data-r="12">1:12</li>
+                  <li data-r="14">1:14</li>
+                  <li data-r="15">1:15</li>
+              </ul>
+            </li>
+          </td>
+
+          <td> 
+            <li style="li:hover: color: white; background: #4b4642" id="press-beans">71g
+            </li>
+          </td>
+
+          <td>
+            <li  style="li:hover: color: white; background: #4b4642" id="press-water">1000g
+            </li>
+          </td>
+
+          <td><div class="arrowsimage"></div>
+            <li><div id="press-servings" style="margin-left: 15px; margin-bottom:14px">1 mug</div>
+              <ul class="calc" id="press-servings-dropdown">
+                  <li data-cell="calcmugimage" data-value="onemug" data-g="300">1 small mug</li>
+                  <li data-cell="calcmugimage" data-value="twomugs" data-g="400">1 mug</li>
+              </ul>
+            </li>
+          </td>
+
+        </tr>
       </table>
     </div>
-    
+  </div>
+
+
+<h3>Instructions</h3>
+<div>
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-pourover1.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>1. Fold the filter paper at the seam and place it in a clean cone.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-pourover2.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>2. Preheat water and using a slender spout water kettle, pour over the filter into mug to rinse filter paper and warm the dripper and desired drinking vessel.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-pourover3.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>3. Measure beans on a scale according to the bean water ratio and grind beans in a burr grinder.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-pourover4.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>4. Place rinsed and warmed filter, dripper and mug on the scale. Place the fresh grounds into the dripper and give it a gentle shake to flatten the bed of grounds. Tare the scale. *(Remember to remove pre-heat water from vessel)</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-pourover5.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>5. Starting at the center, pour the water in a slow and even spiral over the grounds to fully saturate the beans and remove air pockets. Let bloom for 30sec.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-pourover6.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>6. Using the scale to measure, continue to pour the remaining water ratio over the grounds. Be careful to not let the water level rise above the bed of grounds in the dripper.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-pourover7.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>7. When the last desired drips have drained from the dripper, remove the apparatus from the mug and drink immediately.</p>
+  </div>
+</div>
+
+<h3>Table 1: Brew Method Variables for French Press</h3>
+<div class=brewtable>
+  <table class=brewtable>
+    <tr> 
+    <th>Source</th>
+    <th>Bean:H2O</th>
+    <th>Time</th>
+    <th>Grind</th>
+    <th>Temp</th>
+    <th>Bean</th>
+    </tr>
+
+    <tr> 
+      <td>Blue Bottle</td>
+      <td>1:10</td>
+      <td>30s Bloom, 4min</td>
+      <td>Coarse</td>
+      <td>Boil</td>
+      <td>fruity, heavy, creamy</td>
+    </tr>
+
+    <tr> 
+      <td>Stumptown</td>
+      <td>1:16</td>
+      <td>4min</td>
+      <td>Coarse</td>
+      <td>Just to a boil</td>
+      <td>n/a</td>
+    </tr>
+
+    <tr> 
+      <td>Ritual Coffee</td>
+      <td>1:16</td>
+      <td>4min</td>
+      <td>Medium</td>
+      <td>96°C</td>
+      <td>TBD</td>
+    </tr>
+
+    <tr> 
+      <td>Sight Glass</td>
+      <td>1:14</td>
+      <td>30sec, Stir, 3:30min</td>
+      <td>Coarser</td>
+      <td>Boil, let cool a few min</td>
+      <td>TBD</td>
+    </tr>
+
+    <tr> 
+      <td>Verve</td>
+      <td>1:11</td>
+      <td>30sec, Stir, 3min</td>
+      <td>Coarse</td>
+      <td>90°-96°C</td>
+      <td>TBD</td>
+    </tr>
+
+  </table>
+</div>
 
