--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,11 +1,21 @@
 <h1>Coffee Creativity</h1>
 
-<div class=ideas style="margin-top:50px; margin-bottom:50px; height: 600px">
+<div class=ideas>
     <div>
-        <%= image_tag "coffee-experiments-masonjar.jpg",:height => "500px"%>
+        <%= image_tag "coffee-experiements-stand.jpg", :height => "400px"%>
+        
+        <%= image_tag "coffee-experiments-caltrain-cozy.jpg", :height => "400px"%>
     </div>
 
-      <p>Mason jars are so versitle. From jams, to grains, to liquids for storage. This transparent vessel lends itself well to enjoying the full color range of the brew.</p>
+      <p>Mason jars are so versitle. From jams, to grains, to liquids for storage. Pour over brew on this hand-crafted wooden brew stand, made to fit this ball jar. This vessel also makes an excellent travel mug for the morning commute, kept warm by a hand crocheted jar cozy.</p>
+</div>
+
+<div class=ideas>
+    <div>
+    <%= image_tag "coffee-experiments-fourbarrel-jars.jpg", :height => "300px"%>
+    </div>
+
+      <p>Fourbarrel bean storage at their site in the Mission, SF. Artistic, hipster, and incredible that they go through all these beans in a mere few days.</p>
 </div>
 
 <div class=ideas>
@@ -14,16 +24,9 @@
         <%= image_tag "coffee-experiments-bluemountain.jpg", :height => "300px"%>
     </div>
 
-      <p>Siphon brewers in Taiwan with Blue Mountain coffee. A strange place to have this coffee kiosk in the middle of a super mall in Taipei, but good coffee is not dependent on the surroundings.</p>
+      <p>Siphon brewers in Taiwan with Blue Mountain coffee. A strange place to have this coffee kiosk in the middle of a super mall in Taipei, but good coffee is not dependent on the surroundings, only enhanced.</p>
 </div>
 
-<div class=ideas>
-    <div>
-		<%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "300px"%>
-    </div>
-
-      <p>Sightglass coldbrew with soy milk and vanilla looking like a mighty storm abrewing for an afternoon pick me up.</p>
-</div>
 
 <div class=ideas>
     <div>
@@ -41,4 +44,17 @@
 
       <p>Coffee from Stumptown, in Portland, OR, brings flavors from the northwest. Comparable to San Francisco roasting sytles. And basically you can't go wrong with a bison logo.</p>
 </div>
+
+
+<%= image_tag "coffee-experiments-cup-pigandpepper.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-four-barrel-beans.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-mae-market.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-me-stumptown.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-mokapot-small.png", :height => "170px"%>
+<%= image_tag "coffee-experiments-windowseat-stumptown.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-siphon-maker.jpg", :height => "300px"%>
+
+
 
