--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -156,7 +156,7 @@
   </div>
 </div>
 
-<h3>Table 1: Brew Method Variables for French Press</h3>
+<h3>French Press Variables</h3>
 <div class=brewtable>
   <table class=brewtable>
     <tr> 
