--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -12,7 +12,7 @@
 
 
 
-<h3>Press Brew Calculator</h3>
+<h3>Pour Over Brew Calculator</h3>
 
   <div class=calctable>
     <div class="presscalcimages">
@@ -152,7 +152,7 @@
   </div>
 </div>
 
-<h3>Table 1: Brew Method Variables for French Press</h3>
+<h3>Pour Over Variables</h3>
 <div class=brewtable>
   <table class=brewtable>
     <tr> 
