--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,15 @@
 <h1>Dear Dr. Bean Letters</h1>
-<div class=letters>
-	<p style="text-align:right">September 17th, 2013</p>
-	<p>Dear Dr. Bean</p>
+
+
+<div class=letters style="margin-top:50px">
+	<div style="margin-bottom:30px">
+	 <%= image_tag "coffee-experiments-square-tall-mug.png", :height => "180px"%>
+	 <%= image_tag "coffee-experiments-cup-pigandpepper.jpg", :height => "200px"%>
+	 <%= image_tag "coffee-experiments-square-beans.png", :height => "180px"%>
+    </div>
+
+	<p class=date style="text-align:right">September 17th, 2013</p>
+	<p class=addressee>Dear Dr. Bean</p>
 	<p>I have been researching coffee brew methods for some time and would like to know if there is actually a difference between all these different brewing methods. I think it is a lot of hype for not a lot of difference.</p>
 	<p>Do you have a suggestion for how best to understand these differences?</p>
 	<p>Sincerly,</p>
@@ -9,6 +17,17 @@
 </div>
 
 <div style="margin-top:50px">
-	<%= image_tag "coffee-experiments-inquiryform.png",:height => "350x"%>
+	<%= image_tag "coffee-experiments-square-pourover.png", :height => "100px"%>
+	<%= image_tag "coffee-experiments-me-stumptown.jpg", :height => "150px"%>
+	<%= image_tag "coffee-experiments-square-sm-mug.png", :height => "100px"%>
+	<%= image_tag "coffee-experiments-windowseat-stumptown.jpg", :height => "150px"%>
+	<%= image_tag "coffee-experiments-square-filter.png", :height => "100px"%>
 
 </div>
+
+<div style="margin-top:50px">
+	<%= image_tag "coffee-experiments-science-dripper.png", :height => "250px"%>
+	<%= image_tag "coffee-experiments-inquiryform.png",:height => "300x"%>
+
+</div>
+
