--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -33,3 +33,104 @@
 		</div>
 	</div>
 </div>
+
+<div class=experiment>
+	<h1>Experiment 1: Brew Methods Overview</h1>
+
+	<p>
+		Question: So what are all these brew methods about? Do they really make a difference to the cup of coffee? We decided to compare a few different methods to see what we could find.
+	</p>
+
+	<p>
+		Hypothesis: There is a difference between the brew methods, but may depend on the sensitivity and expertise of the taster’s palate.
+	</p>
+
+	<div class=experimentimg>
+		<%= image_tag "coffee-experiments-science-dripper.png", :height => "300px" %>
+		<%= image_tag "coffee-experiments-fourbarrel-jars.jpg", :height => "300px" %>
+	</div>
+
+	<p>
+		Purpose:  To compare various methods of making a cup of coffee. Compare how each method affects the quality, flavor, and experience of the cup.
+	</p>
+
+	<p>Variables:</p>
+	<p class=experiment>
+		Dependent: Method of cup brewing. i.e. French Press, Pour Over, Clever, Moka Pot, Aeropress. In this experiment we compare 4 different methods. 
+	</p>
+	<p class=experiment>
+		Indepent: Type of bean, roast, water source, water termperature (per brew method), grinds
+	</p>
+	
+
+	<p>Materials</p>
+	<div class=brewlink>
+		<table class=brewlink>
+			<tr>
+				<td><li>
+				<a href="<%=methods_frenchpress_path %>">
+				<%= image_tag "coffee-experiments-sq-clever.png", :height => "100px" %></a>
+				French Press
+				<li></td>
+				<td><li>
+				<a href="<%=methods_pourover_path %>">
+				<%= image_tag "coffee-experiments-sq-pourover.png", :height => "100px" %></a>
+				Pourover
+				</li></td>
+				<td><li>
+				<a href="<%methods_clever_path %>">
+				<%= image_tag "coffee-experiments-sq-frenchpress.png", :height => "100px" %></a>
+				Clever
+				</li></td>
+			</tr>
+		</table>
+	</div>
+
+	<p class=experiment>
+		Using the same beans, same water source (filtered tap water), and following the basci brew methods instructions as described on the other pages, we brewed 4 different cups of coffee. They were all finished being made withint 5 min of each other so their flavors could be compared at the same temperature. 
+	</p>
+
+	<%= image_tag "coffee-experiments-square-beans.png", :height => "100px" %>
+
+	<p>Procedures</p>
+	
+	<ol class=instructions>
+		<li> Following the methods on the other pages, we made some kick butt coffee and it was great. </li>
+		<li>weet, eu roast, frappuccino froth dark frappuccino single shot that acerbic, single origin cortado, espresso white robusta beans, id espresso grinder in arabica iced.</li>
+		<li>Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema. Skinny frappuccino rich cream, grounds grinder, café au lait half and half saucer café au lait saucer affogato trifecta.</li>
+		<li>Wings irish, caffeine eu chicory mazagran crema dripper coffee caffeine lungo, cup beans, sweet a cortado to go robusta, white, redeye half and half dark that brewed. Mazagran, cortado iced, chicory, cultivar dripper lungo mug con panna white dark filter espresso strong.</li>
+		<li>Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema.</li>
+	</ol>
+
+
+
+	<%= image_tag "coffee-experiments-square-kettle-2.png", :height => "100px" %>
+
+	<p>Observations</p>
+	<p class=experiment>
+		1. Following the methods on the other pages, we made some kick butt coffee and it was great.
+		2. weet, eu roast, frappuccino froth dark frappuccino single shot that acerbic, single origin cortado, espresso white robusta beans, id espresso grinder in arabica iced.
+		3. Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema. Skinny frappuccino rich cream, grounds grinder, café au lait half and half saucer café au lait saucer affogato trifecta.
+		4. Wings irish, caffeine eu chicory mazagran crema dripper coffee caffeine lungo, cup beans, sweet a cortado to go robusta, white, redeye half and half dark that brewed. Mazagran, cortado iced, chicory, cultivar dripper lungo mug con panna white dark filter espresso strong. 
+		5. Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema. 
+	</p>
+
+	<%= image_tag "coffee-experiments-square-v60-2.png", :height => "100px" %>
+
+	<p>Conclusion</p>
+	<p class=experiment>
+		1. Following the methods on the other pages, we made some kick butt coffee and it was great.
+		2. weet, eu roast, frappuccino froth dark frappuccino single shot that acerbic, single origin cortado, espresso white robusta beans, id espresso grinder in arabica iced.
+		3. Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema. Skinny frappuccino rich cream, grounds grinder, café au lait half and half saucer café au lait saucer affogato trifecta.
+		4. Wings irish, caffeine eu chicory mazagran crema dripper coffee caffeine lungo, cup beans, sweet a cortado to go robusta, white, redeye half and half dark that brewed. Mazagran, cortado iced, chicory, cultivar dripper lungo mug con panna white dark filter espresso strong. 
+		5. Aroma wings, so frappuccino, irish latte, robusta, kopi-luwak mazagran aroma, single origin americano extra percolator cream beans crema. 
+	</p>
+
+	<%= image_tag "coffee-experiments-square-scale.png", :height => "100px" %>
+
+
+</div>
+
+
+
+
