--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -42,7 +42,7 @@
 		<%= image_tag "coffee-experiments-cup-stumptown.jpg", :height => "300px"%>
     </div>
 
-      <p>Coffee from Stumptown, in Portland, OR, brings flavors from the northwest. Comparable to San Francisco roasting sytles. And basically you can't go wrong with a bison logo.</p>
+      <p>Coffee from Stumptown, in Portland, OR, brings flavors from the northwest.</p>
 </div>
 
 
@@ -52,7 +52,9 @@
 <%= image_tag "coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
 <%= image_tag "coffee-experiments-mae-market.jpg", :height => "300px"%>
 <%= image_tag "coffee-experiments-me-stumptown.jpg", :height => "300px"%>
+
 <%= image_tag "coffee-experiments-mokapot-small.png", :height => "170px"%>
+
 <%= image_tag "coffee-experiments-windowseat-stumptown.jpg", :height => "300px"%>
 <%= image_tag "coffee-experiments-siphon-maker.jpg", :height => "300px"%>
 
