--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -165,52 +165,52 @@
     <th>Time</th>
     <th>Grind</th>
     <th>Temp</th>
-    <th>Bean</th>
+    <th>Notes</th>
     </tr>
 
     <tr> 
       <td>Blue Bottle</td>
       <td>1:10</td>
-      <td>30s Bloom, 4min</td>
+      <td>30s Bloom, 4min brew</td>
       <td>Coarse</td>
       <td>Boil</td>
-      <td>fruity, heavy, creamy</td>
+      <td>dense and heavy, vulnerable to over-extraction</td>
     </tr>
 
     <tr> 
       <td>Stumptown</td>
-      <td>1:16</td>
-      <td>4min</td>
-      <td>Coarse</td>
-      <td>Just to a boil</td>
-      <td>n/a</td>
+      <td>1:14</td>
+      <td>1min Bloom, 3min brew</td>
+      <td>breadcrumb coarse</td>
+      <td>205F</td>
+      <td>an easy way to get truly excellent coffee at home</td>
     </tr>
 
     <tr> 
-      <td>Ritual Coffee</td>
+      <td>Ritual</td>
       <td>1:16</td>
-      <td>4min</td>
-      <td>Medium</td>
-      <td>96°C</td>
-      <td>TBD</td>
+      <td>1min Bloom, 3min brew</td>
+      <td>#5.5 medium</td>
+      <td>205F</td>
+      <td>heavy bodied with rich sweetness</td>
     </tr>
 
     <tr> 
       <td>Sight Glass</td>
-      <td>1:14</td>
-      <td>30sec, Stir, 3:30min</td>
+      <td>1:16</td>
+      <td>30s, Stir, 3:30min</td>
       <td>Coarser</td>
-      <td>Boil, let cool a few min</td>
-      <td>TBD</td>
+      <td>1min after boiling</td>
+      <td>a more rounded sweetness backed by a satisfying mouth feel and body</td>
     </tr>
 
     <tr> 
       <td>Verve</td>
-      <td>1:11</td>
-      <td>30sec, Stir, 3min</td>
-      <td>Coarse</td>
-      <td>90°-96°C</td>
-      <td>TBD</td>
+      <td>1:15</td>
+      <td>30s Bloom, knock down bloom</td>
+      <td>coarser than drip</td>
+      <td>after boil</td>
+      <td>easiest way to start brewing at your house, heavy mouth feel</td>
     </tr>
 
   </table>
