--- a/app/views/methods/clever.html.erb
+++ b/app/views/methods/clever.html.erb
@@ -153,52 +153,25 @@
     <th>Time</th>
     <th>Grind</th>
     <th>Temp</th>
-    <th>Bean</th>
-    </tr>
-
-    <tr> 
-      <td>Blue Bottle</td>
-      <td>1:10</td>
-      <td>30s Bloom, 4min</td>
-      <td>Coarse</td>
-      <td>Boil</td>
-      <td>fruity, heavy, creamy</td>
-    </tr>
-
-    <tr> 
-      <td>Stumptown</td>
-      <td>1:16</td>
-      <td>4min</td>
-      <td>Coarse</td>
-      <td>Just to a boil</td>
-      <td>n/a</td>
-    </tr>
-
-    <tr> 
-      <td>Ritual Coffee</td>
-      <td>1:16</td>
-      <td>4min</td>
-      <td>Medium</td>
-      <td>96°C</td>
-      <td>TBD</td>
+    <th>Notes</th>
     </tr>
 
     <tr> 
       <td>Sight Glass</td>
-      <td>1:14</td>
-      <td>30sec, Stir, 3:30min</td>
-      <td>Coarser</td>
-      <td>Boil, let cool a few min</td>
-      <td>TBD</td>
+      <td>1:19</td>
+      <td>30s Bloom, 3:30min brew</td>
+      <td>medium-coarse0</td>
+      <td>after the boil</td>
+      <td>full, even extraction with a heavy body and mouth feel</td>
     </tr>
 
     <tr> 
       <td>Verve</td>
-      <td>1:11</td>
-      <td>30sec, Stir, 3min</td>
-      <td>Coarse</td>
-      <td>90°-96°C</td>
-      <td>TBD</td>
+      <td>1:15</td>
+      <td>30s Bloom, 3min brew</td>
+      <td>18-22, same as french press</td>
+      <td>after the boil</td>
+      <td>basically a full immersion brewer to provide a consistently amazing coffee</td>
     </tr>
 
   </table>
