--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -24,10 +24,31 @@
 	<%= image_tag "coffee-experiments-square-filter.png", :height => "100px"%>
 
 </div>
+<form action="MAILTO:molly@elephantfig.com" method="post" enctype="text/plain">
+	<div class=inquiryform>
+		<div style="float:right; padding-top: 85px; padding-right:55px">
+			<input type="image" src="<%= image_url "coffee-experiments-inquiry-mail.png"%>" style="height:40px; border:none">
+			</input>
+		</div>
+		<div style="padding-top:85px">
+			<input class=inquiryform type="text" name="Name" value size="33">
+			</input>		
+		</div>
+		<div style="padding-top:23px">
+			<input class=inquiryform type="text" name="Email" value size="33">
+			</input>
+		</div>
+		<div style="padding-top:35px">
+			<input class=inquiryform type="text" name="Subject" value size="33">
+			</input>
+		</div>
+		<div style="padding-top:47px; margin-left:45px">
+			<textarea class=inquiryform type="text" name="Question" style="border:none; padding-left:5px; height:90px; width:400px">
+			</textarea>
+		</div>
+	</div>
+</form>
 
-<div style="margin-top:50px">
-	<%= image_tag "coffee-experiments-science-dripper.png", :height => "250px"%>
-	<%= image_tag "coffee-experiments-inquiryform.png",:height => "300x"%>
 
-</div>
+
 
